# txt.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled-1.txt  advanced_features.cpp  advanced_features.h  bank.bat  bank.db  build.bat  log.txt  main.cpp  task_list.cpp  task_list.h  view.bat  view_data.cpp
database/: DatabaseManager.cpp  DatabaseManager.h  bank.db
gui/: CompanyListWidget.cpp  CompanyListWidget.h  MainWindow.cpp  MainWindow.h  TaskListWidget.cpp  TaskListWidget.h  main_qt.cpp
models/: Account.cpp  Account.h  Company.cpp  Company.h  Task.cpp  Task.h  Transaction.cpp  Transaction.h
sqlite3/lib/: sqlite3.lib
